--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>My Profile</title>
+  <title>Mini Heart</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="myprofile.css">
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
+  <script src="myprofile.js"></script>
 </head>
 <body>
-  <main role="main">
+  <!-- <main role="main">
 
     <section class="jumbotron text-center">
       <div class="container">
@@ -19,7 +20,6 @@
         <p class="lead text-muted">I'm Duc, Developer live in Da Nang, Viet Nam 🇻🇳</p>
         <p>
           <a href="#" class="btn btn-primary" id="clickme">I love you</a>
-          <!-- <a href="#" class="btn btn-secondary my-2">Secondary action</a> -->
         </p>
       </div>
     </section>
@@ -80,6 +80,7 @@
         timer: 1800
       });
     });
-  </script>
+  </script> -->
+  <canvas id="heart">Mini</canvas>
 </body>
 </html>
